@@ -6,6 +6,8 @@
 	  src/SDCCerr.h,
 	  src/SDCCpeeph.c:
 	  Peephole rule application limit, fixes bug #3557.
+	* src/SDCCgenconstprop.cc:
+	  Improve narrowing of multiplicative operators based on generalized constant propagation.
 
 2023-12-20 Philipp Klaus Krause <philipp@colecovision.eu>
 
